[gd_scene load_steps=2 format=3 uid="uid://whsmfv8l4j71"]

[ext_resource type="Script" path="res://Scripts/Scene/Start_Scene.gd" id="1_a18qc"]

[node name="StartScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a18qc")

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.402344
anchor_top = 0.296682
anchor_right = 0.597656
anchor_bottom = 0.368441
offset_left = 37.5
offset_top = 7.75
offset_right = -37.5
offset_bottom = -7.74998
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(75, 15.5)
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Button1" type="Button" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "SVO_demo_scene"

[node name="CheckButton" type="CheckButton" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
button_pressed = true
text = "svo_debugMode"

[node name="CenterContainer2" type="CenterContainer" parent="."]
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.402344
anchor_top = 0.296682
anchor_right = 0.597656
anchor_bottom = 0.368441
offset_left = 37.4997
offset_top = 107.75
offset_right = -37.4998
offset_bottom = 92.2502
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(75, 15.5)
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="CenterContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "demo_scene_simplified"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "F: Find a new random path;    M: Find a new random path with coroutine thread; E: Console print path(if console is usable); 
Mouse: Rotate camera;     Mouse right click(hold): Active camera rotate; 
WASD: Move camera;     LShift: Accelerate;     LCtrl: Down Space: Up;     Esc: Back to menu"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "
NavAgent origin is at the top of Green Core Box;
In debugMode it will take about 10s to load rendering Mesh;"

[connection signal="pressed" from="CenterContainer/HBoxContainer/Button1" to="." method="_on_StartButton1_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/CheckButton" to="." method="_on_debugMode_changed"]
[connection signal="pressed" from="CenterContainer2/Button2" to="." method="_on_StartButton2_pressed"]
